--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,4 +1,5 @@
 {
+  "build_entry_point": "docs",
   "docsets_to_publish": [
     {
       "docset_name": "YingdaOPS",
@@ -43,7 +44,5 @@
       "Pdf"
     ]
   },
-  "need_generate_pdf_url_template": true,
-  "need_generate_pdf": false,
-  "need_generate_intellisense": false
+  "need_generate_pdf_url_template": false
 }
