--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,4 +1,5 @@
 {
+  "build_entry_point": "docs",
   "docsets_to_publish": [
     {
       "docset_name": "YingdaOPS",
@@ -11,8 +12,7 @@
       "type_mapping": {
         "Conceptual": "Content",
         "ManagedReference": "Content",
-        "RestApi": "Content",
-        "Tutorial": "Content"
+        "RestApi": "Content"
       },
       "build_entry_point": "docs",
       "template_folder": "_themes",
@@ -44,7 +44,5 @@
       "Pdf"
     ]
   },
-  "need_generate_pdf_url_template": true,
-  "need_generate_pdf": false,
-  "need_generate_intellisense": false
+  "need_generate_pdf_url_template": false
 }
